# mr-rev

./: README.md  docker-compose.yml  nginx.conf
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: Chart.vue
