[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
serde = { version = "1.0.215", features = ["derive"] }
reqwest = { version = "0.12.9", features = [
    "json",
    "rustls-tls",
    "http2",
], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full"] }
rustls = "0.23.19"
env_logger = "0.11.5"
actix-cors = "0.7.0"
